chore: add favicon, fix navbar on small and medium screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ h3 {
 
 .logo {
   height: auto;
-  width: 80px;
+  width: 70px;
 }
 
 /* footer */
@@ -916,6 +916,12 @@ footer i {
 /* Media Queries */
 
 /* small screens */
+@media screen and (max-width: 339px) {
+  .logo {
+    width: 60px;
+  }
+}
+
 @media screen and (max-width: 425px) {
   #recipe-body .card {
     margin: 0 5px 10px;
@@ -928,6 +934,15 @@ footer i {
   /* Gifts */
   #gift-section .card-body {
     min-height: 368px;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-nav .nav-link {
+      padding-right: 0px !important;
+  }
+  .logo {
+    width: 55px;
   }
 }
 
